--- a/lecture/1-navbar/style.css
+++ b/lecture/1-navbar/style.css
@@ -4,42 +4,61 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   line-height: 1.2;
   font-family: Helvetica;
 }
-body > * { padding: 0 1rem; }
-p, h2, h3, h4, h5, h6 { padding: 1rem 0;}
-h1 { margin: 2rem 0; }
-nav ul { list-style: none; }
+
+body>* {
+  padding: 0 1rem;
+}
+
+p,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 1rem 0;
+}
+
+h1 {
+  margin: 2rem 0;
+}
+
+nav ul {
+  list-style: none;
+}
 
 
 /* Main Content Styles */
 p {
   padding: 0;
 }
-ul {
-  display: flex;
-  gap: 1rem;
+
+#nav-links {
+  /* display: flex; */
+  /* gap: 1rem; */
 }
 
 header {
   padding: 0.5rem;
   background-color: rgb(236, 236, 236);
-  display: flex;
 
-  /* alignment along the main axis */
-  justify-content: space-between; 
-  
-  /* alignment along the cross axis */
-  align-items: center;
-   
-  gap: 0.2rem;
-  flex-direction: row;
+  /* What happens when you make this display:flex? */
+
+  /* Use justify-content for alignment along the main axis */
+
+  /* Use align-items for alignment along the cross axis */
+
+  /* gap inserts space between elements (but not around them)*/
+
+  /* flex-direction lets you choose row or column */
 }
+
+
 
 main {
   margin: 2rem 10%;
 }
-
-
